Complete IDOL Vector Store integration and upgrade to 2.0.0-M1